# hamidi

./: build_file.sh  db.sqlite3  procfile  pyproject.toml  requirements.txt  vercel.json
final/: settings.py  urls.py  wsgi.py
shops/: admin.py  forms.py  models.py  urls.py  views.py
shops/migrations/: 0001_initial.py
templates/: base.html  dashboard.html  detail.html  details.html  final.html  hello.html  hello5.html  home.html  login.html  new.html  new2.html  register.html
