[project]
name = "shops"
version = "1.0.0"
description = "shops"
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    'Django==5.2.8',
    'django-crispy-forms==2.5',
    'django-environ==0.12.0',
    'django-filter==25.2',
    'environ==1.0',
    'gunicorn==24.1.1',
    'packaging==26.0',
    'pillow==12.0.0',
    'psycopg==3.3.2',
    'psycopg2==2.9.11',
    'psycopg2-binary==2.9.11',
    'python-dotenv==1.2.1',
    'sqlparse==0.5.3',
    'tzdata==2025.2',
    'whitenoise==6.11.0',

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shops"]

[tool.setuptools.package-data]
